add game-of-life-dart and two-forty-eight

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       <section id="main_content" class="inner">
         <h2>Projects</h2>
 
-        <p></p>
+        <ul>
+          <li><a href="game-of-life-dart/">Game of Life</a> (<a href="https://github.com/dbathon/game-of-life-dart">repository</a>)</li>
+          <li><a href="two-forty-eight/">Two forty eight</a> (<a href="https://github.com/dbathon/two-forty-eight">repository</a>)</li>
+        </ul>
       </section>
     </div>
 
