--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h2>Projects</h2>
 
         <ul>
+          <li><a href="spiderball/">SpiderBall</a> (<a href="https://github.com/dbathon/spiderball-ts">repository</a>)</li>
           <li><a href="game-of-life-dart/">Game of Life</a> (<a href="https://github.com/dbathon/game-of-life-dart">repository</a>)</li>
           <li><a href="two-forty-eight/">Two forty eight</a> (<a href="https://github.com/dbathon/two-forty-eight">repository</a>)</li>
         </ul>
